--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/d77ea1130c.js" crossorigin="anonymous"></script>
 </head>
 <body>
    <div id="header">
     <div class="container">
         <nav>
-            <img src="images/logo.png" class="logo">
-            <ul>
+            <img src="images/piyushlogo1.png" class="logo">
+            <ul id="sidemenu">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <i class="fas fa-times" onclick="closemenu()"></i>
             </ul>
+            <i class="fas fa-bars" onclick="openmenu()"></i>
         </nav>
         <div class="header-text">
             <p>Full Stack Developer</p>
@@ -66,19 +69,98 @@
         </div>
     </div>
    </div>
+   <!-- -----sevices---------- -->
 
+   <div id="services">
+    <div class="container">
+        <h1 class="sub-title">My Services</h1>
+        <div class="services-list">
+            <div>
+                <i class="fa-solid fa-code"></i>
+                <h2>Web Development</h2>
+                <p>Lorem oluptatum minus. Excepturi reiciendis cumque nobis iste unde accusantium numquam rerum.</p>
+                 <a href="#">Learn More</a>
+            </div>
+            <div>
+                <i class="fa-solid fa-crop-simple"></i>
+                <h2>Desktop App Development</h2>
+                <p>Lorem oluptatum minus. Excepturi reiciendis cumque nobis iste unde accusantium numquam rerum.</p>
+                 <a href="#">Learn More</a>
+            </div>
+            <div>
+                <i class="fa-brands fa-app-store-ios"></i>
+                <h2>Mobile App Development</h2>
+                <p>Lorem oluptatum minus. Excepturi reiciendis cumque nobis iste unde accusantium numquam rerum.</p>
+                 <a href="#">Learn More</a>
+            </div>
+        </div>
+    </div>
+   </div>
+   <!-- -------portfolio--------- -->
+    <div id="portfolio">
+        <div class="container">
+            <h1 class="sub-title">My Work</h1>
+            <div class="work-list">
+                <div class="work">
+                    <img src="images/bank.png">
+                    <div class="layer">
+                        <h3>Bank Management System</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum vero totam voluptatem, rem dolore obcaecati.</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="images/todoSpring.jpg">
+                    <div class="layer">
+                        <h3>To-Do Application</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum vero totam voluptatem, rem dolore obcaecati.</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="images/portWeb.jpg">
+                    <div class="layer">
+                        <h3>Portfolio Website</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum vero totam voluptatem, rem dolore obcaecati.</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+            </div>
+            <a href="#" class="btn">See More</a>
+        </div>
+    </div>
+    <!-- -------contact---------- -->
+     <div id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="contact-left">
+                    <h1 class="sub-title">Contact Me</h1>
+                    <p><i class="fa-solid fa-paper-plane"></i> kharepiyushpk@gmail.com</p>
+                    <p><i class="fa-solid fa-phone"></i> 9516467095</p>
+                    <div class="social-icons">
+                        <a href=""><i class="fa-brands fa-facebook"></i></a>
+                        <a href=""><i class="fa-brands fa-twitter-square"></i></a>
+                        <a href=""><i class="fa-brands fa-instagram"></i></a>
+                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    </div>
+                    <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
+                </div>
+                <div class="contact-right">
+                    <form name="submit-to-google-sheet">
+                        <input type="text" name="name" placeholder="Your Name" required>
+                        <input type="email" name="email" placeholder="Your Email" required>
+                        <textarea name="message" rows="6" placeholder="Your Message"></textarea>
+                        <button type="submit" class="btn btn2">Submit</button>
+                    </form>
+                    <span id="msg"></span>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>Copyright @Piyush. Made with <i class="fa-solid fa-heart"></i> by Piyush Khare</p>
+        </div>
+     </div>
 
-   <script>
-    var tablinks = document.getElementsByClassName("tab-links");
-    var tabcontents = document.getElementsByClassName("tab-contents");
-    function opentab(tabname){
-        for(tablink of tablinks){
-            tablink.classList.remove("active-link");
-        }
-        for(tabcontent of tabcontents){
-            tabcontent.classList.remove("active-tab");
-        }
-    }
-   </script>
+  <script src="script.js"></script>
 </body>
 </html>
